# code-embedding-optimization

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
Finetuning/: requirements.txt
Finetuning/scripts/: compare_experiments.py  full_training.sh  lr_sweep.sh  lr_sweep_all_batchsizes.sh  lr_sweep_remaining.sh  lr_test_5e4.sh  run_baseline_gpu1.sh  run_baseline_gpu1_optimized.sh  run_compressed_gpu2.sh  run_compressed_gpu2_optimized.sh  run_reduced_gpu1.sh  setup_vm.sh  test_baseline_gpu1.sh  test_compressed_gpu2.sh  test_optimized.sh
Finetuning/src/code_tasks/: config.py  pipeline.py
pca-variance-analysis/outputs/: pca_variance_t5small.json
pca-variance-analysis/scripts/: pca_variance_analysis.py
phase1-finetuning-random-init/outputs/full_training_bs16_lr1e-4_d320_random/: all_results.json  generation_config.json  resolved_config.json  test_results.json  timing.json  train_results.json  trainer_state.json  validation_results.json
phase1-finetuning-random-init/outputs/full_training_bs16_lr1e-4_d512_random/: all_results.json  resolved_config.json  (+5 more)
phase1-finetuning-random-init/scripts/: full_training.sh
phase2-pretraining/: pretrain.py
phase2-pretraining/.claude/: settings.json
phase3-finetuning-pretrained/scripts/: pretrained_training.sh
scripts/: compute_flops.py  lr_sweep_all_batchsizes.sh  run_baseline_gpu0.sh  run_both_parallel.sh  wait_and_launch.sh  wait_and_launch_baseline.sh  wait_and_run_batch32_64.sh
src/code_tasks/: __init__.py  datasets.py  embedding_adapters.py  metrics.py  model_builder.py  models.py  pipeline.py  timing.py
(+213 files in other folders)
